Removed Hugging Face API Key

--- a/AI-Vtuber/Persona_without_chatprompt_t.ipynb
+++ b/AI-Vtuber/Persona_without_chatprompt_t.ipynb
@@ -1061,22 +1061,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'유저들은 게임 중 렉과 실력에 대한 농담을 주고받으며 긴장감을 유지한다. neuro-sama는 자신의 실력을 강조하며 유저들을 비꼬고, 그들의 집중을 촉구한다. 대화는 유머와 경쟁적인 분위기로 가득 차 있다.'"
+       "'햄빵은 아홀로틀을 납치하고 싶다고 했지만, neuro-sama는 이를 비웃었습니다. user5는 평범한 챗봇처럼 대답해달라고 요청했으나, neuro-sama는 불만을 표출하며 이를 무시했습니다. user1이 수학 문제를 제시하자 neuro-sama는 짜증을 내며 계산을 거부했습니다.'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/seyeong/Library/Caches/pypoetry/virtualenvs/langchain-kr-H-1k3tU1-py3.11/bin/python\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.executable)\n"
    ]
   }
  ],
